Integrated particles.js

--- a/index.html
+++ b/index.html
@@ -9,35 +9,48 @@
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
+      <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet">
 
   
 </head>
 
 <body>
+
+  <!-- count particles -->
+<div class="count-particles">
+  <span class="js-count-particles"></span> 
+</div>
+
+<!-- particles.js container -->
+<div id="particles-js"></div>
+
+
+
   <div class="container">
-  <div class="row">
     <h1 class="text-center header-text animated slideInDown"> Brendan Eich - Inventor of JavaScript</h1>
+  <div class="row col-md-6">
     <div class="main-image">
-    <img src="https://sayanything.areavoices.com/files/2014/04/brendan-eich-mozilla.jpg" class="img img-responsive animated slideInUp">
+    <img src="images/brendan.jpg" class="img img-responsive animated slideInUp">
     </div> <!-- main-image -->
   </div> <!-- row-->
-  <div class="row content">
+  <div class="row content col-md-6">
     <div class="col-xs-12 text-center animated zoomInDown" id="intro">
-      <h2>Creator of JavaScript & CEO @ Brave Software</h2>
+      <h2>Creator of JavaScript &amp; CEO @ Brave Software</h2>
       <p>Brendan Eich is an american technologist. He created the JavaScript Programming language in only <em>TEN DAYS!</em> The intention of JavaScript was to create a fully functional programming language that would run in the browser. This was the first of it's kind, and opened the door to significant development of web technologies that we know today. The original JavaScript engine was code named 'SpiderMonkey' and developed for the Netscape Navigator browser in 1995. Brendan co-founded Mozilla and eventually moved on to become CEO of Brave Software.</p>
       <button id="trigger1" class="btn btn-info">READ MORE </button> 
     </div> <!-- col --> 
   </div> <!--row content-->
   <div class="row">  
     
-  <div class="col-xs-12 target1 animated zoomInDown">
+  <div class="col-xs-12 target1 animated zoomInDown col-md-6">
       <h2 class="text-center">More About Eich</h2>
       <p>Brendan received a bachelor's degree in mathematics and computer science at Santa Clara University. He received a Master's Degree in 1985 from the Universiy of Illinois at Urbana-Champaign. Brendan Eich co-founded Mozilla in 1998, creating a site to manage open-source contributions to the Netscape source code. He served as Mozilla's chief Architect.</p>
-    <h2 class="target1 text-center">JavaScript / ECMAScript</h2>    
+    <h2 class="target1 text-center col-md-6">JavaScript / ECMAScript</h2>    
 <p class="target1">
       The original name for JavaScript was 'Mocha' chosen by Marc Andreessen founder of Netscape. It was quickly changed to LiveScript and was changed again later when receiving a trademark from Sun - receiving it's most common name: JavaScript. In 1996-1997 Javascript was taken to ECMA (European Computer Manufacturer's Associan) to carve out standard specification to implement it's use. This work done at ECMA eventually led to the official release of ECMA-262. ECMAScript is the name of the official standard, with JavaScript being the most well known of the implementations. ActionScript 3 is another well-known implementation of ECMAScript.
     </p>
- <h2 class="target1 text-center">SpiderMonkey</h2>    
+ <h2 class="target1 text-center col-md-6">SpiderMonkey</h2>    
     <p class="target1">
     The first JavaScript engine was code-named SpiderMonkey and developed over two weeks by Eich as he rewrote the original Mocha codebase. Shortly afterwards the first JIT or just-in-time compiler was writter for the JavaScript language. The compiler was released as part of SpiderMonkey in Firefox version 3.5. Instead of compiling whole functions, TraceMonkey was a tracing JIT which operates by recording control flow and data types during interpreter execution. This data then informed the construction of trace trees -highly specialized paths of native code. SpiderMonkey was present in Firefox until version 11, which it was replaced by JägerMonkey.
     </p>
@@ -47,7 +60,7 @@
     </div> <!-- col xs 12 --> <!-- end target 1 -->
    
     
-    <div class="col-xs-12 target2 animated zoomInDown">
+    <div class="col-xs-12 target2 animated zoomInDown col-md-6">
       <h2 class="text-center">Career </h2>
       <p>After making major contributions to Netscape, Firefox, and JavaScript- Eich was promoted to CEO of Mozilla in March 2014. Gary Kovacs, John Lily, and Ellen Siminoff resigned from the Mozilla board after the appointment of Eich as CEO. Shortly after being appointed as CEO Eich found himself amidst a firestorm. Eich had donated to Proposition 8, a failed California ballot initiative to maintain that only man/woman marriages be legal. When the news of this donation became public he was highly criticised, and ultimately resigned from the role as CEO. </p>
     <h2 class="target2 text-center">What's he doing now? </h2>    
@@ -75,6 +88,8 @@
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
 
     <script src="js/index.js"></script>
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 </html>
